--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=Pass@1234
 spring.jpa.show-sql=true
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.boot.message=Hello sushant, This is Department Service
